# maestro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  maestro.bat  pyproject.toml  requirements.txt
src/: azure_cli.py  main.py  models.py  state_management.py
src/commands/: configuration.py  deployment.py  initialization.py  scaling.py  synchronization.py
